[gd_scene load_steps=4 format=3 uid="uid://reyo3ckfahuq"]

[ext_resource type="Script" path="res://scripts/ui/powerup_icon.gd" id="1_tb1dq"]
[ext_resource type="Texture2D" uid="uid://oy1jh1d1t3kd" path="res://icon.svg" id="2_tejmf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_361g3"]
bg_color = Color(0, 0, 0, 0.666667)

[node name="PowerUpIcon" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tb1dq")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_361g3")

[node name="IconTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(90, 90)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tejmf")
expand_mode = 3

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
value = 75.0

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 40.0
offset_right = -50.0
offset_bottom = 63.0
grow_horizontal = 0
text = "10"
horizontal_alignment = 2
vertical_alignment = 2
